# ot-harjoitustyo

./: .coverage  .env  .env.test  .gitignore  .gitignore.save  .gitignore.save.1  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: maksukortti.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: .coverage  config.py  contacts_database.db  csv_reader.py  database_tables.csv  handle_database.py  main.py
src/database/: handle_database.py
src/reader/: csv_reader.py
src/session/: handle_session.py
src/storage/: handle_contacts.py  handle_users.py
src/store/: handle_contacts.py  handle_users.py
src/tests/: handle_contacts_test.py  handle_session_test.py  handle_users_test.py
src/tests/database/: handle_database_test.py
src/tests/session/: handle_session_test.py
src/tests/storage/: handle_contacts_test.py  handle_users_test.py
src/ui/: add_contact.py  add_user.py  functionality.py  login.py  show_contacts.py  ui.py
